--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Coffee roasters</title>
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- HEADER -->
+    <header class="header">
+        <div class="container">
+            <a class="header-logo" href="#">
+                <img src="#" alt="site-logo">
+            </a>
+            <!-- Sitenav -->
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#"></a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#"></a>
+                    </li>
+                    <li class="sitenav-item">
+                        <a class="sitenav-link" href="#"></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- MAIN-CONTENT -->
+    <!-- FOOTER -->
 
 
 
