--- a/index.html
+++ b/index.html
@@ -16,29 +16,114 @@
 
     <!-- HEADER -->
     <header class="header">
-        <div class="container">
+        <div class="sitenav-container container">
             <a class="header-logo" href="#">
-                <img src="#" alt="site-logo">
+                <img class="header-logo-img" src="img/site-logo.svg" alt="site-logo" width="235" height="24">
             </a>
             <!-- Sitenav -->
             <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item">
-                        <a class="sitenav-link" href="#"></a>
+                        <a class="sitenav-link" href="#">Home</a>
                     </li>
                     <li class="sitenav-item">
-                        <a class="sitenav-link" href="#"></a>
+                        <a class="sitenav-link" href="#">About us</a>
                     </li>
                     <li class="sitenav-item">
-                        <a class="sitenav-link" href="#"></a>
+                        <a class="sitenav-link" href="#">Create your plan</a>
                     </li>
                 </ul>
             </nav>
         </div>
+        <div class="container">
+            <div class="header-banner">
+                <div class="header-banner-info">
+                    <h2 class="header-banner-heading">Good coffee <br> is made simply.</h2>
+                    <p class="header-banner-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <a class="header-banner-link button" href="#">Create your plan</a>
+                </div>
+
+                <div class="header-banner-img">
+                    <img class="header-banner-main-img" src="img/banner-img.jpg" alt="img" src="img/banner-img@2x.jpg" width="710" height="696">
+                    <img class="header-banner-rotate-img" src="img/banner-rotate.png" alt="img" src="img/banner-rotate@2x.png" width="160" height="160">
+                </div>
+            </div>
+        </div>
     </header>
     <!-- MAIN-CONTENT -->
-    <!-- FOOTER -->
+    <main class="main-content">
+        <!-- COLLECTION -->
+        <section class="collection">
+            <div class="container">
+                <h2 class="collection-heading">Our collection</h2>
+                <div class="collection-cards">
+                    <div class="collection-card">
+                        <img class="collection-card-img" src="img/kopi1.png" alt="img" width="450" height="375">
+                        <div class="collection-card-info">
+                            <h3 class="collection-card-info-heading">Danche</h3>
+                            <p class="collection-card-info-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                        </div>
+                    </div>
+                    <div class="collection-card">
+                        <div class="collection-card-info">
+                            <h3 class="collection-card-info-heading">Gran Espresso</h3>
+                            <p class="collection-card-info-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                        </div>
+                        <img class="collection-card-img" src="img/kopi2.png" alt="img" width="450" height="375">
+                    </div>
+                    <div class="collection-card">
+                        <img class="collection-card-img" src="img/kopi3.png" alt="img" width="450" height="375">
+                        <div class="collection-card-info">
+                            <h3 class="collection-card-info-heading">Piccollo</h3>
+                            <p class="collection-card-info-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                        </div>
+                    </div>
+                    <div class="collection-card">
+                        <div class="collection-card-info">
+                            <h3 class="collection-card-info-heading">Planalto</h3>
+                            <p class="collection-card-info-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                        </div>
+                        <img class="collection-card-img" src="img/kopi4.png" alt="img" width="450" height="375">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FEATURES -->
+        <section class="features">
+            <div class="container">
+                <div class="features-info">
+                    <h2 class="features-info-heading">Why choose us?</h2>
+                    <p class="features-info-text">A large part of our role is choosing which particular coffees will be featured
+                        in our range. This means working closely with the best coffee growers to give
+                        you a more impactful experience on every level.</p>
+                </div>
 
+                <div class="features-card">
+                    <ul class="features-card-list">
+                        <li class="features-card-item">
+                            <img class="features-card-item-img" src="img/features-card-img1.jpg" alt="img" width="433" height="500">
+                            <h3 class="features-card-item-title">Best quality</h3>
+                            <p class="features-card-item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+                        </li>
+                        <li class="features-card-item">
+                            <img class="features-card-item-img" src="img/features-card-img2.jpg" alt="img" width="433" height="500">
+                            <h3 class="features-card-item-title">Exclusive benefits</h3>
+                            <p class="features-card-item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+                        </li>
+                        <li class="features-card-item">
+                            <img class="features-card-item-img" src="img/features-card-img3.jpg" alt="img" width="433" height="500">
+                            <h3 class="features-card-item-title">Free shipping</h3>
+                            <p class="features-card-item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- WORKS -->
+        <section class="works">How it works</section>
+    </main>
+    <!-- FOOTER -->
+    <footer class="footer">Footer</footer>
 
 
     <script src="js/main.js"></script>
