Add site-header and hero

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <div class="site-header-hero-wrapper">
+        <!-- SITE HEADER -->
         <header class="site-header">
             <div class="site-header-container container">
-                <a href="index.html">
-                    <img class="site-header-logo" src="img/site-logo.svg" alt="site logo" width="235" height="24">
+                <!-- Site logo -->
+                <a class="site-header-logo-link" href="index.html">
+                    <img class="site-header-logo-img" src="img/site-logo.svg" alt="CoffeeRoasters logo" width="235" height="24">
                 </a>
-
+                <!-- Sitenav Menu -->
                 <nav class="sitenav">
                     <ul class="sitenav-list">
                         <li class="sitenav-item">
@@ -31,6 +33,19 @@
                 </nav>
             </div>
         </header>
+
+        <!-- HERO -->
+        <div class="hero">
+            <div class="hero-container container">
+                <div class="hero-info">
+                    <h1 class="hero-info-heading">Good coffee is made simply.</h1>
+                    <p class="hero-info-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <a class="button button-green" href="#">Create your plan</a>
+                </div>
+
+                <img class="hero-img hero-index-img" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+            </div>
+        </div>
     </div>
 
     <script src="js/main.js"></script>
