--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
                     <h2 class="index-collection-heading">Our Collection</h2>
                     <ul class="index-collection-list">
                         <li class="index-collection-item">
-                            <img class="index-collection-img" src="img/kopi1.png" alt="Danche" width="450" height="375" srcset="">
+                            <img class="index-collection-img" src="img/kopi1.png" alt="Danche" width="450" height="375">
                             <div class="index-collection-info">
                                 <h3 class="index-collection-title">Danche</h3>
                                 <p class="index-collection-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
                             </div>
                         </li>
                         <li class="index-collection-item">
-                            <img class="index-collection-img" src="img/kopi2.png" alt="Gran Espresso" width="450" height="375" srcset="">
+                            <img class="index-collection-img" src="img/kopi2.png" alt="Gran Espresso" width="450" height="375">
                             <div class="index-collection-info">
                                 <h3 class="index-collection-title">Gran Espresso</h3>
                                 <p class="index-collection-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
                             </div>
                         </li>
                         <li class="index-collection-item">
-                            <img class="index-collection-img" src="img/kopi3.png" alt="Piccollo" width="450" height="375" srcset="">
+                            <img class="index-collection-img" src="img/kopi3.png" alt="Piccollo" width="450" height="375">
                             <div class="index-collection-info">
                                 <h3 class="index-collection-title">Piccollo</h3>
                                 <p class="index-collection-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
                             </div>
                         </li>
                         <li class="index-collection-item">
-                            <img class="index-collection-img" src="img/kopi4.png" alt="Planalto" width="450" height="375" srcset="">
+                            <img class="index-collection-img" src="img/kopi4.png" alt="Planalto" width="450" height="375">
                             <div class="index-collection-info">
                                 <h3 class="index-collection-title">Planalto</h3>
                                 <p class="index-collection-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
